Fix backup location: update dropdown label, fix manifest paths after move

--- a/web/templates/backups.html
+++ b/web/templates/backups.html
@@ -73,7 +73,7 @@
             <div class="form-group">
                 <label for="backup-location">Backup Location</label>
                 <select id="backup-location">
-                    <option value="default">Default (~/edgecase/backups)</option>
+                    <option value="default">Default (app folder)</option>
                 </select>
                 <div id="location-path" class="location-path"></div>
             </div>
