Revert "Fix session duration to use profile default instead of hardcoded 50"
This reverts commit 6285af2ad62c74a131d197f08f2b6983f1b6a625.

--- a/web/templates/entry_forms/session.html
+++ b/web/templates/entry_forms/session.html
@@ -167,7 +167,7 @@
                 <label for="duration">Session Duration (minutes) *</label>
                 <input type="number" id="duration" name="duration" 
                     min="1" required
-                    value="{% if is_edit %}{{ session.duration }}{% else %}{{ profile_fees.duration|default(50) }}{% endif %}"
+                    value="{% if is_edit %}{{ session.duration }}{% else %}50{% endif %}"
                     placeholder="50" {% if is_billed %}disabled{% endif %}>
             </div>
         </div>
